# DatabricksAssetBundleTemplate

./: databricks.yml  pyproject.toml
notebooks/code/: schema_creation.py
pipelines/: dev.yml  prod.yml
src/lib/lib_code/: code_example.py
templates/: bundle.yaml
